# MetaPromptWiz

./: .gitignore  README.md  calculator_program_examlpe.py  paper_run.py  pyproject.toml
meta_config_wiz/: __init__.py  configuration_utils.py  logger.py  meta_prompt_wiz.py
meta_config_wiz/applications/: text2sql.py
meta_config_wiz/models/: configurations.py  scores.py
meta_config_wiz/program_runner/: all_mean_program_runner.py  program_runner.py  program_runner_factory.py
meta_config_wiz/strategy/: abstract_strategy.py  bayesian_strategy.py  evalautor.py  grid_strategy.py  random_strategy.py  strategy_factory.py  utils.py
